--- a/cmd/webserver/templates/apps_random.gohtml
+++ b/cmd/webserver/templates/apps_random.gohtml
@@ -127,13 +127,13 @@
                             </div>
                             <div class="col-12 col-lg-6 order-1 order-lg-2 mb-4">
 
-                                <div>
-                                    <a class="btn btn-success mr-1" href="{{ .GetInstallLink }}"><i class="fas fa-sign-in-alt"></i> Install</a>
-                                    <a class="btn btn-warning mr-1" href="{{ .GetPath }}"><i class="fas fa-info"></i> More Info</a>
+                                <div id="controls">
                                     <div class="btn btn-danger cursor-pointer mr-1" id="find-another"><i class="fas fa-retweet"></i> Find Another</div>
+                                    <a class="btn btn-warning mr-1" href="{{ .GetPath }}"><i class="fas fa-info"></i> More Info</a>
+                                    <a class="btn btn-success" href="{{ .GetInstallLink }}"><i class="fas fa-sign-in-alt"></i> Install</a>
                                 </div>
 
-                                <h5 class="mt-4 mb-0">Tags:</h5>
+                                <h5 class="mb-0">Tags:</h5>
                                 {{ if gt (len $.AppTags) 0 }}
                                     {{ range $.AppTags }}
                                         <a class="badge badge-pill badge-success" href="{{ .GetPath }}" target="_blank">{{ .Name }}</a>
