--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -339,10 +339,24 @@
                     {{/* Players */}}
                     <div class="tab-pane" id="players" role="tabpanel">
 
-                        <h5>Player Count</h5>
+                        <h5>Player Count - 1 Week</h5>
                         <div id="players-chart">
                             <i class="fas fa-spinner fa-spin"></i>
                         </div>
+
+                        <h5>Player Count - 5 Years</h5>
+                        <div id="players-chart2">
+                            <i class="fas fa-spinner fa-spin"></i>
+                        </div>
+
+                        {{ if ne .App.GroupID "" }}
+
+                            <h5 id="followers">Followers</h5>
+                            <div id="group-chart">
+                                <i class="fas fa-spinner fa-spin"></i>
+                            </div>
+
+                        {{ end }}
 
                         <div class="row">
                             <div class="col-12 col-lg-8">
@@ -403,15 +417,6 @@
 
                             </div>
                         </div>
-
-                        {{ if ne .App.GroupID "" }}
-
-                            <h5 id="followers">Followers</h5>
-                            <div id="group-chart">
-                                <i class="fas fa-spinner fa-spin"></i>
-                            </div>
-
-                        {{ end }}
 
                         {{/* Top players table */}}
                         <h5>Top Players</h5>
