Fix achievements page

--- a/cmd/webserver/templates/_apps_header.gohtml
+++ b/cmd/webserver/templates/_apps_header.gohtml
@@ -46,10 +46,10 @@
             {{/*                {{end}}*/}}
             {{/*            </li>*/}}
             <li class="nav-item">
-                {{if endsWith .Path "/achievements" }}
+                {{if endsWith .Path "/apps/achievements" }}
                     <span class="nav-link active" role="tab"><i class="fas fa-gamepad"></i> Achievements</span>
                 {{else}}
-                    <a class="nav-link" href="/achievements" role="tab"><i class="fas fa-gamepad"></i> Achievements</a>
+                    <a class="nav-link" href="/apps/achievements" role="tab"><i class="fas fa-gamepad"></i> Achievements</a>
                 {{end}}
             </li>
             <li class="nav-item">
