--- a/cmd/webserver/templates/_header.gohtml
+++ b/cmd/webserver/templates/_header.gohtml
@@ -146,7 +146,7 @@
                             <a class="dropdown-item" href="/sales">On Sale</a>
                             <a class="dropdown-item" href="/new-releases">New Releases</a>
                             {{/*<a class="dropdown-item" href="/apps/trending">Trending</a>*/}}
-                            <a class="dropdown-item" href="/achievements">Most Achievements</a>
+                            <a class="dropdown-item" href="/apps/achievements">Most Achievements</a>
                             <a class="dropdown-item" href="/wishlists">Most Wishlists</a>
                             <a class="dropdown-item" href="/apps/random">Random Game</a>
 
