Add ranks to groups

--- a/cmd/webserver/templates/groups.gohtml
+++ b/cmd/webserver/templates/groups.gohtml
@@ -58,6 +58,7 @@
                     <table class="table table-hover table-striped table-counts" data-path="/groups/groups.json">
                         <thead class="thead-light">
                         <tr>
+                            <th scope="col" class="thin">#</th>
                             <th scope="col">Name</th>
                             <th scope="col">Members</th>
                             <th scope="col">Trend</th>
