--- a/cmd/webserver/templates/players.gohtml
+++ b/cmd/webserver/templates/players.gohtml
@@ -76,7 +76,7 @@
                     <table class="table table-hover table-striped table-counts mb-0" data-path="/players/players.json">
                         <thead class="thead-light">
                         <tr>
-                            <th scope="col" class="thin">Rank</th>
+                            <th scope="col" class="thin">#</th>
                             <th scope="col" class="thin">Flag</th>
                             <th scope="col">Player</th>
 
