Fix chart height

--- a/cmd/webserver/assets/sass/_app.scss
+++ b/cmd/webserver/assets/sass/_app.scss
@@ -39,11 +39,7 @@
 
     #players {
 
-        #players-chart {
-            height: 300px;
-        }
-
-        #group-chart {
+        #group-chart, #players-chart, #players-chart2 {
             height: 300px;
         }
     }
