--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -340,25 +340,25 @@
                     <div class="tab-pane" id="players" role="tabpanel">
 
                         <h5>Player Count - 1 Week</h5>
-                        <div id="players-chart">
+                        <div class="mb-4" id="players-chart">
                             <i class="fas fa-spinner fa-spin"></i>
                         </div>
 
                         <h5>Player Count - 5 Years</h5>
-                        <div id="players-chart2">
+                        <div class="mb-4" id="players-chart2">
                             <i class="fas fa-spinner fa-spin"></i>
                         </div>
 
                         {{ if ne .App.GroupID "" }}
 
                             <h5 id="followers">Followers</h5>
-                            <div id="group-chart">
+                            <div class="mb-4" id="group-chart">
                                 <i class="fas fa-spinner fa-spin"></i>
                             </div>
 
                         {{ end }}
 
-                        <div class="row">
+                        <div class="row mb-4">
                             <div class="col-12 col-lg-8">
 
                                 <h5>
