Remove old code

--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -450,18 +450,7 @@
                                 </tr>
                                 </thead>
                                 <tbody>
-                                {{/*                                    {{ range $key, $value := .DLCs }}*/}}
-                                {{/*                                        <tr data-link="{{.GetPath}}">*/}}
-                                {{/*                                            <td class="img">*/}}
-                                {{/*                                                <div class="icon-name">*/}}
-                                {{/*                                                    <div class="icon"><img src="{{ .GetIcon }}" alt="{{.GetName}}"></div>*/}}
-                                {{/*                                                    <div class="name">{{.GetName}}</div>*/}}
-                                {{/*                                                </div>*/}}
-                                {{/*                                            </td>*/}}
-                                {{/*                                            <td data-sort="{{ .ReleaseDateUnix }}" nowrap="nowrap">{{.GetReleaseDateNice}}</td>*/}}
-                                {{/*                                        </tr>*/}}
-                                {{/*                                    {{ end }}*/}}
-                                </tbody>
+                                </tbody>¬
                             </table>
                         </div>
 
