--- a/cmd/webserver/templates/_header.gohtml
+++ b/cmd/webserver/templates/_header.gohtml
@@ -231,7 +231,7 @@
                     </li>
 
                     <li class="nav-item {{if startsWith .Path "/donate" }}active{{end}}">
-                        <a class="nav-link" href="/donate"><i class="fas fa-heart text-danger"></i> Upgrade</a>
+                        <a class="nav-link" href="/donate"><i class="fas fa-heart text-danger"></i> Donate</a>
                     </li>
 
                 </ul>
