--- a/cmd/webserver/templates/badge.gohtml
+++ b/cmd/webserver/templates/badge.gohtml
@@ -33,7 +33,7 @@
                         {{ if gt .PlayerLevel 0}}
                             Your achieved level <strong>{{ comma .PlayerLevel }}</strong> on <strong>{{ .PlayerTime }}</strong> and are ranked <strong>{{ .PlayerRank }}</strong>!
                         {{ else }}
-                            You have not achieved this badge yet.
+                            You have not achieved this badge.
                         {{ end }}
 
                     {{ else }}
