--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -441,8 +441,8 @@
                     {{/* DLC */}}
                     <div class="tab-pane" id="dlc" role="tabpanel">
 
-                        <div class="row">
-                            <div class="col-sm-8 col-md-6 col-md-4">
+                        <div class="form-row">
+                            <div class="col-12 col-md-6 col-lg-5 col-xl-4 mb-2">
                                 <div class="form-group">
                                     <label for="dlc-search">Search</label>
                                     <input name="search" type="search" class="form-control gdb-search" id="dlc-search">
@@ -648,8 +648,8 @@
                     {{/* Items */}}
                     <div class="tab-pane" id="items" role="tabpanel">
 
-                        <div class="row">
-                            <div class="col-sm-8 col-md-6 col-md-4">
+                        <div class="form-row">
+                            <div class="col-12 col-md-6 col-lg-5 col-xl-4 mb-2">
                                 <div class="form-group">
                                     <label for="items-search">Search</label>
                                     <input name="search" type="search" class="form-control gdb-search" id="items-search">
