--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -468,8 +468,10 @@
                             {{/* Games List */}}
                             <div class="form-row">
                                 <div class="col-12 col-md-6 col-lg-5 col-xl-4 mb-2">
-                                    <label for="player-games-search" class="sr-only sr-only-focusable">Game Search</label>
-                                    <input type="text" id="player-games-search" name="player-games-search" class="form-control" placeholder="Game Search">
+                                    <div class="form-group">
+                                        <label for="player-games-search" class="sr-only sr-only-focusable">Game Search</label>
+                                        <input type="text" id="player-games-search" name="player-games-search" class="form-control" placeholder="Game Search">
+                                    </div>
                                 </div>
                             </div>
 
