--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -37,9 +37,11 @@
                             <a class="nav-link nav-link-small" data-toggle="tab" href="#wishlist" role="tab">Wishlist ({{ comma .Player.WishlistAppsCount }})</a>
                         </li>
                     {{ end }}
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-small" data-toggle="tab" href="#achievements" role="tab">Achievements</a>
-                    </li>
+                    {{ if eq .Env "local" }}
+                        <li class="nav-item">
+                            <a class="nav-link nav-link-small" data-toggle="tab" href="#achievements" role="tab">Achievements</a>
+                        </li>
+                    {{ end }}
                     {{if gt .Player.FriendsCount 0}}
                         <li class="nav-item">
                             <a class="nav-link nav-link-small" data-toggle="tab" href="#friends" role="tab">Friends ({{ comma .Player.FriendsCount }})</a>
@@ -539,6 +541,21 @@
                     {{/* Achievements */}}
                     <div class="tab-pane" id="achievements" role="tabpanel">
 
+                        <div class="table-responsive">
+                            <table class="table table-hover table-striped table-counts mb-0" data-path="/players/{{ .Player.ID }}/achievements-summary.json" id="achievements-summary-table">
+                                <thead class="thead-light">
+                                <tr>
+                                    <th scope="col">Game</th>
+                                    <th scope="col">Have</th>
+                                    <th scope="col">%</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                </tbody>
+                            </table>
+                        </div>
+
+                        <h5 class="mt-4">Latest Achievements</h5>
                         <div class="table-responsive">
                             <table class="table table-hover table-striped table-counts mb-0" data-path="/players/{{ .Player.ID }}/achievements.json" id="achievements-table" data-ordering="false">
                                 <thead class="thead-light">
