--- a/cmd/webserver/templates/apps_random.gohtml
+++ b/cmd/webserver/templates/apps_random.gohtml
@@ -130,7 +130,7 @@
                                 <div id="controls">
                                     <div class="btn btn-danger cursor-pointer mr-1" id="find-another"><i class="fas fa-retweet"></i> Find Another</div>
                                     <a class="btn btn-warning mr-1" href="{{ .GetPath }}"><i class="fas fa-info"></i> More Info</a>
-                                    <a class="btn btn-success" href="{{ .GetInstallLink }}"><i class="fas fa-sign-in-alt"></i> Install</a>
+                                    <a class="btn btn-success" href="{{ .GetPlayLink }}"><i class="fas fa-sign-in-alt"></i> Play</a>
                                 </div>
 
                                 <h5 class="mb-0">Tags:</h5>
