--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -28,8 +28,8 @@
                         <i class="fas fa-home"></i> Homepage
                     </a>
                 {{end}}
-                <a href="{{ .App.GetInstallLink }}" class="mr-2">
-                    <i class="fas fa-sign-in-alt"></i> Install
+                <a href="{{ .App.GetPlayLink }}" class="mr-2">
+                    <i class="fas fa-sign-in-alt"></i> Play
                 </a>
             </small>
         </div>
