--- a/cmd/webserver/templates/group.gohtml
+++ b/cmd/webserver/templates/group.gohtml
@@ -46,7 +46,7 @@
 
                 <h5>Game DB players in {{ .Group.Abbr }}</h5>
                 <table class="table table-hover table-striped table-counts mb-0" data-path="/groups/{{ .Group.ID }}/table.json" id="players" data-ordering="false">
-                    <thead>
+                    <thead class="thead-light">
                     <tr>
                         <th>Player</th>
                     </tr>
