--- a/cmd/scaler/list.gohtml
+++ b/cmd/scaler/list.gohtml
@@ -20,7 +20,7 @@
 
     <div class="container">
 
-        <h3>Servers: {{ len .Consumers }}</h3>
+        <h3>Servers: {{ len .Consumers }}<small>/10</small></h3>
         <table class="table">
             <thead>
             <tr>
