Update signup text

--- a/cmd/webserver/templates/signup.gohtml
+++ b/cmd/webserver/templates/signup.gohtml
@@ -7,7 +7,7 @@
 
         <div class="jumbotron">
             <h1><i class="fas fa-key"></i> Signup</h1>
-            <p class="lead">Signup to highlight apps you own, groups you are in etc.</p>
+            <p class="lead">Signup for a personalised experience.</p>
         </div>
 
         {{ template "_flashes" . }}
