--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -3,7 +3,7 @@
 
     <div class="container" id="player-page" data-id="{{ .Player.ID }}" data-path="{{ .Player.GetPath }}">
 
-        <div class="jumbotron">
+        <div class="jumbotron" id="jumbotron">
 
             <img class="rounded" src="{{ .Player.GetAvatar }}" alt="{{ .Player.PersonaName }}">
 
