Limit levels chart to below 2000

--- a/cmd/webserver/templates/stats.gohtml
+++ b/cmd/webserver/templates/stats.gohtml
@@ -33,7 +33,7 @@
                     <i class="fas fa-spinner fa-spin"></i>
                 </div>
 
-                <h5 class="">Game DB Player Levels</h5>
+                <h5 class="">Game DB Player Levels <small>For levels below 2000</small></h5>
                 <div class="chart mb-4" id="player-levels">
                     <i class="fas fa-spinner fa-spin"></i>
                 </div>
