--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -541,7 +541,7 @@
 
                         {{ if eq .User.PatreonLevel 0 }}
                             <div class="alert alert-primary" role="alert">
-                                Sign up and link your Steam account to scan achievements.
+                                <a href="/signup">Signup</a> and link your Steam account to scan achievements.
                             </div>
                         {{ end }}
 
