--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -913,39 +913,33 @@
                                                     <th scope="col" class="thin">Key</th>
                                                     <th scope="col" class="thin">Section</th>
                                                     <th scope="col">Value</th>
-                                                    <th scope="col" class="thin">Raw</th>
                                                 </tr>
                                                 </thead>
-                                                <tbody>
+                                                <tbody class="cursor-pointer">
                                                 <tr data-raw="{{ htmlEscape .App.Version }}">
                                                     <td>version</td>
                                                     <td>Other</td>
                                                     <td>{{ .App.Version }}</td>
-                                                    <td><i class="fas fa-eye"></i></td>
                                                 </tr>
                                                 <tr data-raw="{{ .App.ChangeNumber }}">
                                                     <td>change_number</td>
                                                     <td>Other</td>
                                                     <td><a href="/changes/{{ .App.ChangeNumber }}">{{ .App.ChangeNumber }}</a></td>
-                                                    <td><i class="fas fa-eye"></i></td>
                                                 </tr>
                                                 <tr data-raw="{{ htmlEscape .App.GetPICSUpdatedNice }}">
                                                     <td>updated_steam</td>
                                                     <td>Other</td>
                                                     <td>{{ .App.GetPICSUpdatedNice }}</td>
-                                                    <td><i class="fas fa-eye"></i></td>
                                                 </tr>
                                                 <tr data-raw="{{ htmlEscape .App.GetUpdatedNice }}">
                                                     <td>updated_game_db</td>
                                                     <td>Other</td>
                                                     <td>{{ .App.GetUpdatedNice }}</td>
-                                                    <td><i class="fas fa-eye"></i></td>
                                                 </tr>
                                                 <tr data-raw="{{ htmlEscape .App.Type }}">
                                                     <td>type</td>
                                                     <td>Other</td>
                                                     <td>{{ .App.GetType }}</td>
-                                                    <td><i class="fas fa-eye"></i></td>
                                                 </tr>
                                                 {{ range .Extended }}
                                                     <tr data-raw="{{ htmlEscape .Value }}">
@@ -953,7 +947,6 @@
                                                         <td nowrap="nowrap">{{ .Key }}</td>
                                                         <td>Extended</td>
                                                         <td class="{{ .TDClass }}">{{ .ValueFormatted }}</td>
-                                                        <td><i class="fas fa-eye"></i></td>
                                                     </tr>
                                                 {{ end }}
                                                 {{ range .Common }}
@@ -966,7 +959,6 @@
                                                         </td>
                                                         <td>Common</td>
                                                         <td class="{{ .TDClass }}">{{ .ValueFormatted }}</td>
-                                                        <td><i class="fas fa-eye"></i></td>
                                                     </tr>
                                                 {{ end }}
                                                 {{ range .UFS }}
@@ -974,7 +966,6 @@
                                                         <td nowrap="nowrap">{{ .Key }}</td>
                                                         <td>UFS</td>
                                                         <td class="{{ .TDClass }}">{{ .ValueFormatted }}</td>
-                                                        <td><i class="fas fa-eye"></i></td>
                                                     </tr>
                                                 {{ end }}
                                                 {{ range $key, $value := .Config }}
@@ -982,7 +973,6 @@
                                                         <td nowrap="nowrap">{{ .Key }}</td>
                                                         <td>Config</td>
                                                         <td class="{{ .TDClass }}">{{ .ValueFormatted }}</td>
-                                                        <td><i class="fas fa-eye"></i></td>
                                                     </tr>
                                                 {{ end }}
                                                 </tbody>
