--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -76,14 +76,9 @@
                             <a class="nav-link nav-link-small" data-toggle="tab" href="#dlc" role="tab">DLC ({{ comma .App.DLCCount }})</a>
                         </li>
                     {{ end }}
-                    {{ if gt (len .Packages) 0 }}
+                    {{ if or (gt (len .Packages) 0) (gt (len .Bundles) 0) }}
                         <li class="nav-item">
-                            <a class="nav-link nav-link-small" data-toggle="tab" href="#packages" role="tab">Packages ({{ comma (len .Packages) }})</a>
-                        </li>
-                    {{ end }}
-                    {{ if gt (len .Bundles) 0 }}
-                        <li class="nav-item">
-                            <a class="nav-link nav-link-small" data-toggle="tab" href="#bundles" role="tab">Bundles ({{ comma (len .Bundles) }})</a>
+                            <a class="nav-link nav-link-small" data-toggle="tab" href="#packages" role="tab">Packages ({{ comma (add (len .Packages) (len .Bundles)) }})</a>
                         </li>
                     {{ end }}
                     {{ if gt (len .App.NewsIDs) 0 }}
@@ -677,46 +672,11 @@
                     {{/* Packages */}}
                     <div class="tab-pane" id="packages" role="tabpanel">
 
-                        {{if gt (len .Packages) 0}}
-
-                            <div class="table-responsive">
-                                <table class="table table-hover table-striped table-datatable mb-0" data-order='[[0, "asc"]]'>
-                                    <thead class="thead-light">
-                                    <tr>
-                                        <th scope="col">Package</th>
-                                        <th scope="col">Billing</th>
-                                        <th scope="col">License</th>
-                                        <th scope="col">Status</th>
-                                        <th scope="col">Apps</th>
-                                    </tr>
-                                    </thead>
-                                    {{ range $key, $value := .Packages }}
-                                        <tr data-link="{{ .GetPath }}">
-                                            <td>{{ .GetName }}</td>
-                                            <td>{{ .GetBillingType }}</td>
-                                            <td>{{ .GetLicenseType }}</td>
-                                            <td>{{ .GetStatus }}</td>
-                                            <td>{{ comma (len .Apps) }}</td>
-                                        </tr>
-                                    {{ end }}
-                                </table>
-                            </div>
-
-                        {{ else }}
-
-                            <p>This app is not in a package.</p>
-
-                        {{ end }}
-
-                    </div>
-
-                    <div class="tab-pane" id="bundles" role="tabpanel">
-
-                        <div class="table-responsive">
-                            <table class="table table-hover table-striped table-datatable mb-0" data-order='[[0, "asc"]]'>
+                        <div class="table-responsive mb-4">
+                            <table class="table table-hover table-striped table-datatable table-counts mb-0" data-order='[[0, "asc"]]'>
                                 <thead class="thead-light">
                                 <tr>
-                                    <th scope="col">Name</th>
+                                    <th scope="col">Bundle</th>
                                     <th scope="col">Discount</th>
                                     <th scope="col">Apps</th>
                                     <th scope="col">Packages</th>
@@ -740,8 +700,30 @@
                             </table>
                         </div>
 
-                    </div>
+                        <div class="table-responsive">
+                            <table class="table table-hover table-striped table-datatable table-counts mb-0" data-order='[[0, "asc"]]'>
+                                <thead class="thead-light">
+                                <tr>
+                                    <th scope="col">Package</th>
+                                    <th scope="col">Billing</th>
+                                    <th scope="col">License</th>
+                                    <th scope="col">Status</th>
+                                    <th scope="col">Apps</th>
+                                </tr>
+                                </thead>
+                                {{ range $key, $value := .Packages }}
+                                    <tr data-link="{{ .GetPath }}">
+                                        <td>{{ .GetName }}</td>
+                                        <td>{{ .GetBillingType }}</td>
+                                        <td>{{ .GetLicenseType }}</td>
+                                        <td>{{ .GetStatus }}</td>
+                                        <td>{{ comma (len .Apps) }}</td>
+                                    </tr>
+                                {{ end }}
+                            </table>
+                        </div>
 
+                    </div>
                     <div class="tab-pane" id="similar" role="tabpanel">
 
                         <h5>Similar by Tag</h5>
