--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -334,33 +334,39 @@
                     {{/* Players */}}
                     <div class="tab-pane" id="players" role="tabpanel">
 
-                        <h5>Player Count - 1 Week</h5>
-                        <div class="mb-4" id="players-chart">
-                            <i class="fas fa-spinner fa-spin"></i>
-                        </div>
-
-                        <h5>Player Count - 5 Years</h5>
-                        <div class="mb-4" id="players-chart2">
-                            <i class="fas fa-spinner fa-spin"></i>
-                        </div>
-
-                        {{ if ne .App.GroupID "" }}
-
-                            <h5 id="followers">Followers</h5>
-                            <div class="mb-4" id="group-chart">
-                                <i class="fas fa-spinner fa-spin"></i>
-                            </div>
-
-                        {{ end }}
-
                         <div class="row mb-4">
-                            <div class="col-12 col-lg-8">
+                            <div class="col-12 col-lg-4 col-xl-6 mb-4 mb-lg-0">
+
+                                <h5>Peaks</h5>
+                                <table class="table mb-0">
+                                    <tbody>
+                                    <tr>
+                                        <td>Peak All Time</td>
+                                        <td>{{ comma .App.PlayerPeakAllTime }}</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Peak Last Week</td>
+                                        <td>{{ comma .App.PlayerPeakWeek }}</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Peak Last 10 minutes</td>
+                                        <td>{{ comma64 .PlayersInGame }}</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Average Last Week</td>
+                                        <td>{{ commaf .App.PlayerAverageWeek }}</td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+
+                            </div>
+                            <div class="col-12 col-lg-8 col-xl-6">
 
                                 <h5>
                                     Owner Estimations
                                     <small><a target="_blank" rel="noopener" href="https://steamspy.com/app/{{ .App.ID }}">By Steam Spy</a></small>
                                 </h5>
-                                <table class="table">
+                                <table class="table mb-0">
                                     <tbody>
                                     <tr>
                                         <td>Owners</td>
@@ -386,32 +392,26 @@
                                 </table>
 
                             </div>
-                            <div class="col-12 col-lg-4">
-
-                                <h5>Peaks</h5>
-                                <table class="table">
-                                    <tbody>
-                                    <tr>
-                                        <td>Peak All Time</td>
-                                        <td>{{ comma .App.PlayerPeakAllTime }}</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Peak Last Week</td>
-                                        <td>{{ comma .App.PlayerPeakWeek }}</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Peak Last 10 minutes</td>
-                                        <td>{{ comma64 .PlayersInGame }}</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Average Last Week</td>
-                                        <td>{{ commaf .App.PlayerAverageWeek }}</td>
-                                    </tr>
-                                    </tbody>
-                                </table>
-
-                            </div>
                         </div>
+
+                        <h5>Player Count - 1 Week</h5>
+                        <div class="mb-4" id="players-chart">
+                            <i class="fas fa-spinner fa-spin"></i>
+                        </div>
+
+                        <h5>Player Count - 5 Years</h5>
+                        <div class="mb-4" id="players-chart2">
+                            <i class="fas fa-spinner fa-spin"></i>
+                        </div>
+
+                        {{ if ne .App.GroupID "" }}
+
+                            <h5 id="followers">Followers</h5>
+                            <div class="mb-4" id="group-chart">
+                                <i class="fas fa-spinner fa-spin"></i>
+                            </div>
+
+                        {{ end }}
 
                         {{/* Top players table */}}
                         <h5>Top Players</h5>
