--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -539,7 +539,7 @@
                     {{/* Achievements */}}
                     <div class="tab-pane" id="achievements" role="tabpanel">
 
-                        {{ if eq .User.PatreonLevel 0 }}
+                        {{ if eq .User.Level 0 }}
                             <div class="alert alert-primary" role="alert">
                                 <a href="/signup">Signup</a> and link your Steam account to scan achievements.
                             </div>
