--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -672,11 +672,12 @@
                     {{/* Packages */}}
                     <div class="tab-pane" id="packages" role="tabpanel">
 
+                        <h5>Bundles</h5>
                         <div class="table-responsive mb-4">
                             <table class="table table-hover table-striped table-datatable table-counts mb-0" data-order='[[0, "asc"]]'>
                                 <thead class="thead-light">
                                 <tr>
-                                    <th scope="col">Bundle</th>
+                                    <th scope="col">Name</th>
                                     <th scope="col">Discount</th>
                                     <th scope="col">Apps</th>
                                     <th scope="col">Packages</th>
@@ -700,11 +701,12 @@
                             </table>
                         </div>
 
+                        <h5>Packages</h5>
                         <div class="table-responsive">
                             <table class="table table-hover table-striped table-datatable table-counts mb-0" data-order='[[0, "asc"]]'>
                                 <thead class="thead-light">
                                 <tr>
-                                    <th scope="col">Package</th>
+                                    <th scope="col">Name</th>
                                     <th scope="col">Billing</th>
                                     <th scope="col">License</th>
                                     <th scope="col">Status</th>
