--- a/cmd/webserver/templates/home.gohtml
+++ b/cmd/webserver/templates/home.gohtml
@@ -30,7 +30,7 @@
                         <div class="card mb-4">
                             <h5 class="card-header"><i class="fas fa-user-friends"></i> Player Ladders</h5>
                             <div class="card-body p-3">
-                                <p class="card-text">Who is the highest level on Steam, or who has the most games in your country or state?</p>
+                                <p class="card-text">Who is the highest level on Steam, or who has the most games in your country/state?</p>
                             </div>
                         </div>
                     </a>
@@ -89,7 +89,43 @@
                 </div>
 
             </div>
-            <div class="col-12 col-lg-8">
+            <div class="col-12 col-lg-6">
+
+                <div class="card border-0 games mb-4">
+                    <h5 class="card-header">Top Games <span class="float-right"><a href="/apps">More</a></span></h5>
+                    <div class="card-body p-0">
+                        <div class="row no-gutters">
+                            {{ range $key, $value := .TopGames }}
+                                <div class="col-6">
+                                    <a href="{{ .GetPath }}">
+                                        <img src='data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 460 215"%3E%3C/svg%3E' data-lazy="https://images.weserv.nl/?url={{ .GetHeaderImage }}&output=webp" alt="{{ .GetName }}">
+                                    </a>
+                                </div>
+                            {{ end }}
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-12 col-lg-6">
+
+                <div class="card border-0 games mb-4">
+                    <h5 class="card-header">New Games <span class="float-right"><a href="/new-releases">More</a></span></h5>
+                    <div class="card-body p-0">
+                        <div class="row no-gutters">
+                            {{ range $key, $value := .NewGames }}
+                                <div class="col-6">
+                                    <a href="{{ .GetPath }}">
+                                        <img src='data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 460 215"%3E%3C/svg%3E' data-lazy="https://images.weserv.nl/?url={{ .GetHeaderImage }}&output=webp" alt="{{ .GetName }}">
+                                    </a>
+                                </div>
+                            {{ end }}
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-12 col-xl-6">
 
                 <div class="card mb-4" id="players">
                     <div class="card-header">
@@ -125,6 +161,9 @@
                     </div>
                 </div>
 
+            </div>
+            <div class="col-12 col-xl-6">
+
                 <div class="card mb-4" id="sales">
                     <div class="card-header">
                         <h5 class="d-inline">Game Sales</h5>
@@ -159,39 +198,11 @@
                     </div>
                 </div>
 
-                {{/*                <div class="card mb-4" id="prices">*/}}
-                {{/*                    <div class="card-header">*/}}
-                {{/*                        <h5 class="d-inline">Price Drops</h5>*/}}
-                {{/*                        <h5 class="float-right mb-0">*/}}
-                {{/*                            <span class="badge badge-secondary" id="live-badge">Live</span>*/}}
-                {{/*                        </h5>*/}}
-                {{/*                    </div>*/}}
-                {{/*                    <div class="card-body">*/}}
+            </div>
+            <div class="col-12">
 
-                {{/*                        <div class="table-responsive">*/}}
-                {{/*                            <table class="table table-hover table-striped mb-0">*/}}
-                {{/*                                <thead class="thead-light">*/}}
-                {{/*                                <tr>*/}}
-                {{/*                                    <th>Game</th>*/}}
-                {{/*                                    <th>Price</th>*/}}
-                {{/*                                    <th>Discount</th>*/}}
-                {{/*                                    <th>When</th>*/}}
-                {{/*                                </tr>*/}}
-                {{/*                                </thead>*/}}
-                {{/*                                <tbody>*/}}
-                {{/*                                </tbody>*/}}
-                {{/*                                <tfoot>*/}}
-                {{/*                                <tr>*/}}
-                {{/*                                    <td colspan="4"><a href="/price-changes">More Price Changes</a></td>*/}}
-                {{/*                                </tr>*/}}
-                {{/*                                </tfoot>*/}}
-                {{/*                            </table>*/}}
-                {{/*                        </div>*/}}
-                {{/*                    </div>*/}}
-                {{/*                </div>*/}}
-
-                <div class="card mb-4 mb-lg-0" id="news">
-                    <h5 class="card-header">Popular Game News</h5>
+                <div class="card" id="news">
+                    <h5 class="card-header">News</h5>
                     <div class="card-body">
                         <ul class="list-unstyled">
 
@@ -211,35 +222,7 @@
                 </div>
 
             </div>
-            <div class="col-12 col-lg-4">
 
-                {{/*                <div class="card mb-4">*/}}
-                {{/*                    <h5 class="card-header">{{ .Spotlight.Title }}</h5>*/}}
-                {{/*                    <div class="card-body">*/}}
-                {{/*                        <p class="mb-1">{{ .Spotlight.Text }}</p>*/}}
-                {{/*                        <a href="{{ .Spotlight.Link }}">Check it out</a>*/}}
-                {{/*                    </div>*/}}
-                {{/*                </div>*/}}
-
-                <div class="card border-0" id="new-releases">
-                    <h5 class="card-header">Popular New Releases</h5>
-                    <div class="card-body p-0">
-                        <div class="row no-gutters">
-                            {{ range $key, $value := .Games }}
-                                <div class="col-12 col-sm-6 col-lg-12">
-                                    <a href="{{ .GetPath }}">
-                                        <img src='data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 460 215"%3E%3C/svg%3E' data-lazy="https://images.weserv.nl/?url={{ .GetHeaderImage }}&output=webp" alt="{{ .GetName }}">
-                                    </a>
-                                </div>
-                            {{ end }}
-                        </div>
-                    </div>
-                    <div class="card-footer">
-                        <a href="/new-releases">More Releases</a>
-                    </div>
-                </div>
-
-            </div>
         </div>
 
     </div>
