--- a/cmd/webserver/assets/sass/_home.scss
+++ b/cmd/webserver/assets/sass/_home.scss
@@ -35,6 +35,7 @@ body.dark {
     .games {
         img {
             width: 100%;
+            border-bottom: solid 1px white;
         }
     }
 
