--- a/cmd/webserver/templates/search.gohtml
+++ b/cmd/webserver/templates/search.gohtml
@@ -12,13 +12,15 @@
                 </div>
                 <div class="col-sm-12 col-lg-6">
 
-                    <div class="input-group input-group-lg mt-1 mb-0">
-                        <label for="search" class="sr-only sr-only-focusable">Search for a Game</label>
-                        <input class="form-control" type="search" placeholder="Search for a Game" id="search" name="search" autofocus>
-                        <div class="input-group-append">
-                            <input type="submit" value="Search" class="input-group-text">
+                    <form action="/search" method="get">
+                        <div class="input-group input-group-lg mt-1 mb-0">
+                            <label for="search" class="sr-only sr-only-focusable">Search for a Game</label>
+                            <input class="form-control" type="search" placeholder="Search for a Game" id="search" name="search" autofocus value="{{ .Search }}">
+                            <div class="input-group-append">
+                                <input type="submit" value="Search" class="input-group-text">
+                            </div>
                         </div>
-                    </div>
+                    </form>
 
                 </div>
                 <div class="col-12">
@@ -33,7 +35,9 @@
         <div class="card">
             <div class="card-body">
 
-                x
+                {{ range .Results }}
+                    <div>{{ .Name }}</div>
+                {{ end }}
 
             </div>
         </div>
